# hakaton-2025-8

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  predict_ai.py
ai/: Dockerfile  ai_requirements.txt
ai/src/: app_service.py  criterion.py  data_processing.py  filtering.py  main.py  model.py  predict.py  service.py  transforms.py
ai/weights/: centers.pickle  model_1.3.4_10.pth  ref_hist.pickle
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml  setup.cfg
backend/patient/: admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/patient/management/commands/: create_default_superuser.py
backend/patient/migrations/: 0001_initial.py  0002_alter_scan_file_alter_scan_markup_file.py  0003_alter_scan_file_alter_scan_series_uid_and_more.py  0004_dicominfo_slice.py  0005_remove_scan_status.py  0006_remove_scan_file_alter_scan_path_to_study.py
backend/patient/templates/patient/: base.html  home.html
backend/patient/upload/: models.py  serializers.py  views.py
backend/src/: celery.py  settings.py  urls.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/i-moscow/: page.tsx
frontend/src/components/: AppSidebar.tsx  History.tsx  ImageLoader.tsx  Login.tsx  Navbar.tsx
frontend/src/components/ui/: button.tsx  circular-progress.tsx  data-table.tsx  date-picker-ru.tsx  date-picker.tsx  dialog.tsx
frontend/src/constants/: upload.ts
frontend/src/store/: authStore.tsx  loadStore.tsx
